@@ -1,3 +1,9 @@
+2008-05-12 [wwp]	0.18.0cvs5
+
+	* src/gtkhtml2_prefs.c
+		Fix storing of translated string "Any" in plugins prefs
+		(whitelisting).
+
 2008-05-02 [paul]	0.18.0cvs4
 
 	* po/pl.po
